--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,7 +9,20 @@
     <dimen name="eighteen_sp">18sp</dimen>
     <dimen name="fourteen_sp">14sp</dimen>
     <dimen name="twenty_four">24dp</dimen>
-    <dimen name="fourty">40dp</dimen>
+    <dimen name="forty">40dp</dimen>
     <dimen name="twenty_four_sp">24sp</dimen>
     <dimen name="twelve_sp">12sp</dimen>
+    <dimen name="thirty_two">32dp</dimen>
+    <dimen name="fourteen">14dp</dimen>
+    <dimen name="seventy_two">72dp</dimen>
+    <dimen name="forty_eight">48dp</dimen>
+    <dimen name="two">2dp</dimen>
+    <dimen name="one_hundred_twenty">120dp</dimen>
+    <dimen name="one_hundred_twenty_two">122dp</dimen>
+    <dimen name="eight">8dp</dimen>
+    <dimen name="twenty_sp">20sp</dimen>
+    <dimen name="twenty_eight">28dp</dimen>
+    <dimen name="one_hundred_forty">140dp</dimen>
+    <dimen name="sixty_four">64dp</dimen>
+    <dimen name="ten_sp">10sp</dimen>
 </resources>
