--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,11 @@
     <dimen name="sixteen">16dp</dimen>
     <dimen name="sixteen_sp">16sp</dimen>
     <dimen name="four">4dp</dimen>
+    <dimen name="two_zero_zero">200dp</dimen>
+    <dimen name="thirty_two">32dp</dimen>
+    <dimen name="twenty_sp">20sp</dimen>
+    <dimen name="forty_six">46dp</dimen>
+    <dimen name="fifty_four">54dp</dimen>
+    <dimen name="eight">8dp</dimen>
+    <dimen name="three_two_zero">320dp</dimen>
 </resources>
