--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,14 +1,270 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.details.DetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/txt_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/sixteen"
+        android:layout_marginTop="@dimen/twelve"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sixteen_sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="nick" />
+
+    <ImageView
+        android:id="@+id/img_main_pic"
+        android:layout_width="@dimen/one_six_zero"
+        android:layout_height="@dimen/two_two_zero"
+        android:layout_marginTop="@dimen/sixteen"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="@id/txt_name"
+        app:layout_constraintTop_toBottomOf="@id/txt_name"
+        />
+
+    <ImageView
+        android:id="@+id/img_first_pic"
+        android:layout_width="@dimen/eighty"
+        android:layout_height="@dimen/eighty"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toStartOf="@id/img_second_pic"
+        app:layout_constraintStart_toEndOf="@id/img_main_pic"
+        app:layout_constraintTop_toTopOf="@id/img_main_pic" />
+
+
+    <ImageView
+        android:id="@+id/img_second_pic"
+        android:layout_width="@dimen/eighty"
+        android:layout_height="@dimen/eighty"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/img_first_pic"
+        app:layout_constraintTop_toTopOf="@id/img_main_pic" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_photos"
+        android:layout_width="@dimen/zero"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/orange"
+        android:text="@string/photos"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="@id/img_main_pic"
+        app:layout_constraintEnd_toEndOf="@id/img_second_pic"
+        app:layout_constraintStart_toStartOf="@id/img_first_pic" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_facts"
+        android:layout_width="@dimen/zero"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/sixteen"
+        android:backgroundTint="@color/orange"
+        android:text="@string/fact"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toTopOf="@id/btn_photos"
+        app:layout_constraintEnd_toEndOf="@id/btn_photos"
+        app:layout_constraintStart_toStartOf="@id/btn_photos" />
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/zero"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_main_pic">
+
+        <LinearLayout
+            android:id="@+id/ln_scroll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingStart="@dimen/twelve">
+
+            <TextView
+                android:id="@+id/txt_real_names"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginBottom="@dimen/four"
+                android:text="@string/real_name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_real_name_first"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_real_name_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_other_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/four"
+                android:text="@string/other_names"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_other_name_first"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/four"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_other_name_second"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+
+            <TextView
+                android:id="@+id/txt_birthday_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/eight"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold"
+                tools:text="Дата рождения" />
+
+            <TextView
+                android:id="@+id/txt_birthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+
+            <TextView
+                android:id="@+id/txt_place_birthday_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/eight"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold"
+                tools:text="Место рождения" />
+
+            <TextView
+                android:id="@+id/txt_place_birthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_education_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/eight"
+                android:text="@string/education"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_education"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_car_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/career"
+                android:textColor="@color/black"
+                android:layout_marginVertical="@dimen/four"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_car"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+
+            <TextView
+                android:id="@+id/txt_character_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/characteristic"
+                android:layout_marginVertical="@dimen/four"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_height_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/four"
+                android:textSize="@dimen/sixteen_sp"
+                android:text="@string/height" />
+
+            <TextView
+                android:id="@+id/txt_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_weight_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="@dimen/four"
+                android:textSize="@dimen/sixteen_sp"
+                android:text="@string/weight" />
+
+            <TextView
+                android:id="@+id/txt_weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/sixteen_sp"
+                tools:text="name" />
+
+            <TextView
+                android:id="@+id/txt_other_participants"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/forty"
+                android:text="@string/other_participants"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sixteen_sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_others"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/thirty_two"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_participants" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
