--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#E2643C</color>
     <color name="gray">#828282</color>
+    <color name="gray_light">#33000000</color>
 </resources>
