--- a/app/src/main/res/layout/fragment_ribbon.xml
+++ b/app/src/main/res/layout/fragment_ribbon.xml
@@ -9,13 +9,13 @@
 
     <androidx.recyclerview.widget.RecyclerView
         tools:listitem="@layout/item_rb"
-        android:id="@+id/rv_item"
+        android:id="@+id/rv_rb"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
+        android:layout_width="@dimen/zero"
+        android:layout_height="@dimen/zero"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
