--- a/app/src/main/res/layout/item_albums.xml
+++ b/app/src/main/res/layout/item_albums.xml
@@ -3,48 +3,48 @@
     android:layout_marginHorizontal="@dimen/forty"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="240dp"
+    android:layout_height="@dimen/two_four_zero"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
+ 
     <ImageView
-        android:id="@+id/rv_album_img"
+        android:id="@+id/item_album_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/twicealbum1"
-        android:layout_width="120dp"
-        android:layout_height="122dp"/>
+        android:layout_width="@dimen/one_hundred_twenty"
+        android:layout_height="@dimen/one_hundred_twenty"/>
 
     <TextView
-        android:id="@+id/rv_album_name"
+        android:id="@+id/item_album_name"
         android:background="@color/gray"
-        android:gravity="center"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="@dimen/twenty_four_sp"
-        app:layout_constraintEnd_toEndOf="@id/rv_album_img"
-        app:layout_constraintTop_toBottomOf="@id/rv_album_img"
-        app:layout_constraintStart_toStartOf="@id/rv_album_img"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@id/item_album_img"
+        app:layout_constraintTop_toBottomOf="@id/item_album_img"
+        app:layout_constraintStart_toStartOf="@id/item_album_img"
         tools:text="@string/likey"
         android:layout_width="@dimen/zero"
         android:layout_height="wrap_content"/>
 
     <com.google.android.material.button.MaterialButton
-        app:cornerRadius="@dimen/sixteen"
+        app:cornerRadius="@dimen/eight"
         android:textColor="@color/white"
         android:paddingEnd="@dimen/twenty_four"
         android:drawableEnd="@drawable/vector"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/orange"
         android:gravity="center"
         android:text="@string/buy"
         android:textSize="@dimen/twelve_sp"
-        app:layout_constraintEnd_toEndOf="@id/rv_album_name"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@id/rv_album_name"
-        app:layout_constraintTop_toBottomOf="@id/rv_album_name" />
+        app:layout_constraintEnd_toEndOf="@id/item_album_name"
+        app:layout_constraintStart_toStartOf="@id/item_album_name"
+        app:layout_constraintTop_toBottomOf="@id/item_album_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
