--- a/app/src/main/res/layout/item_buy.xml
+++ b/app/src/main/res/layout/item_buy.xml
@@ -1,94 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_marginTop="@dimen/fourteen"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_marginTop="@dimen/fourteen">
 
     <ImageView
-        android:layout_marginStart="@dimen/twelve"
-        android:id="@+id/rv_album_img"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/twicealbum1"
+        android:id="@+id/item_album_img"
         android:layout_width="@dimen/one_hundred_twenty"
-        android:layout_height="@dimen/one_hundred_twenty_two"/>
+        android:layout_height="@dimen/one_hundred_twenty_two"
+        android:layout_marginStart="@dimen/twelve"
+        tools:src="@drawable/twicealbum1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/rv_album_name"
-        android:background="@color/gray"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="@dimen/twenty_four_sp"
-        app:layout_constraintEnd_toEndOf="@id/rv_album_img"
-        app:layout_constraintTop_toBottomOf="@id/rv_album_img"
-        app:layout_constraintStart_toStartOf="@id/rv_album_img"
-        tools:text="@string/likey"
+        android:id="@+id/item_album_name"
         android:layout_width="@dimen/zero"
-        android:layout_height="wrap_content"/>
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@id/item_album_img"
+        app:layout_constraintStart_toStartOf="@id/item_album_img"
+        android:layout_height="wrap_content"
+        android:background="@color/gray"
+        android:textColor="@color/white"
+        android:textSize="@dimen/twenty_four_sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/item_album_img"
+        tools:text="@string/likey" />
 
     <TextView
-        android:id="@+id/txt_price"
+        android:id="@+id/item_txt_price_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/thirty_two"
         android:text="@string/price"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/rv_album_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintStart_toEndOf="@id/item_album_img"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textSize="@dimen/sixteen_sp"
-        android:layout_marginTop="@dimen/four"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        tools:text="3500 com"
-        app:layout_constraintTop_toBottomOf="@id/txt_price"
-        app:layout_constraintStart_toStartOf="@id/txt_price"
+        android:id="@+id/item_txt_price"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/four"
+        android:textColor="@color/black"
+        android:textSize="@dimen/sixteen_sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@id/item_txt_price_name"
+        app:layout_constraintTop_toBottomOf="@id/item_txt_price_name"
+        tools:text="3500 com" />
 
     <ImageView
         android:id="@+id/img_plus"
-        android:src="@drawable/ic_baseline_add_24"
-        android:background="@color/orange"
-        android:layout_marginStart="@dimen/thirty_two"
-        app:layout_constraintStart_toEndOf="@id/rv_album_name"
-        app:layout_constraintBottom_toBottomOf="@id/rv_album_name"
         android:layout_width="@dimen/forty_eight"
-        android:layout_height="@dimen/thirty_two"/>
+        android:layout_height="@dimen/thirty_two"
+        android:layout_marginStart="@dimen/thirty_two"
+        android:background="@color/orange"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="@id/item_album_name"
+        app:layout_constraintStart_toEndOf="@id/item_album_name" />
 
     <ImageView
         android:id="@+id/img_minus"
-        android:src="@drawable/ic_baseline_horizontal_rule_24"
-        android:layout_marginEnd="@dimen/seventy_two"
-        app:layout_constraintBottom_toBottomOf="@id/rv_album_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/orange"
         android:layout_width="@dimen/forty_eight"
-        android:layout_height="@dimen/thirty_two"/>
+        android:layout_height="@dimen/thirty_two"
+        android:layout_marginEnd="@dimen/seventy_two"
+        android:background="@color/orange"
+        android:src="@drawable/ic_baseline_horizontal_rule_24"
+        app:layout_constraintBottom_toBottomOf="@id/item_album_name"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txt_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:textSize="@dimen/sixteen_sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/img_minus"
-        app:layout_constraintTop_toTopOf="@id/img_minus"
         app:layout_constraintEnd_toStartOf="@id/img_minus"
         app:layout_constraintStart_toEndOf="@id/img_plus"
-        tools:text="@string/zero"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintTop_toTopOf="@id/img_minus"
+        tools:text="@string/zero" />
 
     <View
-        android:background="@color/gray"
-        android:layout_marginTop="@dimen/fourteen"
-        app:layout_constraintTop_toBottomOf="@id/img_minus"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/two"/>
+        android:layout_height="@dimen/two"
+        android:layout_marginTop="@dimen/fourteen"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@id/img_minus" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
