--- a/app/src/main/res/layout/item_participants.xml
+++ b/app/src/main/res/layout/item_participants.xml
@@ -1,68 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
-    android:layout_height="wrap_content"
-    android:layout_margin="16dp"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="@dimen/one_hundred"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/sixteen">
 
     <ImageView
         android:id="@+id/img_part"
-        android:src="@drawable/participants"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="@dimen/one_hundred"
+        android:layout_height="@dimen/one_hundred_twenty"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="100dp"
-        android:layout_height="115dp"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/participants" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#33000000"
+        android:layout_width="@dimen/zero"
+        android:layout_height="wrap_content"
+        android:background="@color/gray_light"
         app:layout_constraintBottom_toBottomOf="@id/img_part"
         app:layout_constraintEnd_toEndOf="@id/img_part"
-        app:layout_constraintStart_toStartOf="@id/img_part"
-        android:layout_width="@dimen/zero"
-        android:layout_height="wrap_content">
+        app:layout_constraintStart_toStartOf="@id/img_part">
 
         <TextView
-            android:layout_marginStart="@dimen/four"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/txt_job"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/four"
             android:textColor="@color/white"
             android:textSize="@dimen/fourteen_sp"
             android:textStyle="bold"
-            tools:text="job"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="job" />
 
 
         <TextView
             android:id="@+id/txt_name"
-            app:layout_constraintStart_toStartOf="@id/txt_job"
-            app:layout_constraintBottom_toTopOf="@id/txt_job"
-            android:textStyle="bold"
-            android:textSize="@dimen/sixteen_sp"
-            android:textColor="@color/white"
-            android:text="name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sixteen_sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/txt_job"
+            app:layout_constraintStart_toStartOf="@id/txt_job"
+            tools:text="name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_details"
-        android:layout_marginTop="@dimen/eight"
-        app:cornerRadius="@dimen/eight"
-        android:textAllCaps="false"
-        android:backgroundTint="@color/orange"
-        android:textSize="@dimen/ten_sp"
-        android:text="@string/more"
-        app:layout_constraintEnd_toEndOf="@id/img_part"
-        app:layout_constraintTop_toBottomOf="@id/img_part"
-        app:layout_constraintStart_toStartOf="@id/img_part"
+        android:id="@+id/btn_info"
         android:layout_width="100dp"
-        android:layout_height="@dimen/forty"/>
+        android:layout_height="@dimen/forty"
+        android:layout_marginTop="@dimen/eight"
+        android:backgroundTint="@color/orange"
+        android:text="@string/more"
+        android:textSize="@dimen/ten_sp"
+        app:cornerRadius="@dimen/eight"
+        app:layout_constraintEnd_toEndOf="@id/img_part"
+        app:layout_constraintStart_toStartOf="@id/img_part"
+        app:layout_constraintTop_toBottomOf="@id/img_part" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
