--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -133,7 +133,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sixteen_sp"
-                tools:text="Дата рождения"
+                android:text="@string/date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -148,7 +148,7 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/sixteen_sp"
-                tools:text="Место рождения"
+                android:text="@string/place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -163,7 +163,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sixteen_sp"
-                tools:text="Образование"
+                android:text="@string/school"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -177,7 +177,7 @@
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="@dimen/sixteen_sp"
-                tools:text="Карьера"
+                android:text="@string/carear"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
@@ -192,7 +192,7 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sixteen_sp"
-                tools:text="Характеристика"
+                android:text="@string/Characteristic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
