--- a/app/src/main/res/layout/fragment_ribbon.xml
+++ b/app/src/main/res/layout/fragment_ribbon.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.fragment.ribbon.RibbonFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        tools:listitem="@layout/item_rv"
+        tools:listitem="@layout/item_rb"
         android:id="@+id/rv_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
