--- a/app/src/main/res/layout/item_participants.xml
+++ b/app/src/main/res/layout/item_participants.xml
@@ -38,6 +38,7 @@
 
 
         <TextView
+            android:id="@+id/txt_name"
             app:layout_constraintStart_toStartOf="@id/txt_job"
             app:layout_constraintBottom_toTopOf="@id/txt_job"
             android:textStyle="bold"
@@ -50,8 +51,10 @@
 
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_details"
         android:layout_marginTop="@dimen/eight"
         app:cornerRadius="@dimen/eight"
+        android:textAllCaps="false"
         android:backgroundTint="@color/orange"
         android:textSize="@dimen/ten_sp"
         android:text="@string/more"
